--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-ui-sortable": "^0.14.0",
-    "jquery-ui": "^1.11.4"
+    "jquery-ui": "^1.11.4",
+    "components-font-awesome": "~4.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
