--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-touch": "^1.4.0",
     "angular-ui-sortable": "^0.14.0",
     "jquery-ui": "^1.11.4",
-    "components-font-awesome": "~4.5.0"
+    "components-font-awesome": "^4.6.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -25,6 +25,12 @@
         "less/bootstrap.less",
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
+      ]
+    },
+    "components-font-awesome": {
+      "main": [
+        "less/font-awesome.less",
+        "css/font-awesome.css"
       ]
     }
   }
